--- a/medical_shop/templates/admin/admin_home.html
+++ b/medical_shop/templates/admin/admin_home.html
@@ -1,13 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    {% load static %}
-
+  <title>medical_trust shop</title>
+  {% load static %}
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    admin
+
+  <nav class="navbar -xl bg-success navbar-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="javascript:void(0)"><img src="{% static 'imgs/medical.jpg.jpg' %}" class="rounded-circle " alt="" style="height: 30%; width: 5%;"><br>MEDICAL_SHOP</a>
+
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#"></a>
+        </li>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#"></a>
+          </li>
+      <a class="navbar-brand" href="#"><img src="" alt=""></a>
+    </div>
+  </nav>
+
+<nav class="navbar navbar-expand-sm  navbar-light bg-light  ">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="mynavbar">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="javascript:void(0)">HOME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="add_pro">Medical PRODUCT</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="javascript:void(0)">Wellness</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="javascript:void(0)">Lab Tests</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="javascript:void(0)">Health Corner</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="shop_logout">LOGOUT</a>
+        </li>
+      </ul>
+      <!-- <form class="d-flex">
+        <input class="form-control me-2" type="text" placeholder="Search">
+        <button class="btn btn-primary" type="button">Search</button>
+      </form> -->
+    </div>
+  </div>
+</nav>
+
+
+
 </body>
 </html>
