--- a/medical_shop/templates/user/user_home.html
+++ b/medical_shop/templates/user/user_home.html
@@ -34,11 +34,14 @@
     <div class="collapse navbar-collapse" id="mynavbar">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)">HOME</a>
+          <a class="nav-link" href="javascript:void(0)">Medicin</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="shop_logout">LOGOUT</a>
+          <a class="nav-link" href="shop_logout">Wellness</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="shop_logout">Beauty</a>
         </li>
       </ul>
       <!-- <form class="d-flex">
@@ -81,6 +84,16 @@
     <span class="carousel-control-next-icon"></span>
   </button>
 </div>
+
+<div class="row">
+  <div class="col bg-success">.col</div>
+  <div class="col bg-warning">.col</div>
+  <div class="col bg-success">.col</div>
+</div>
+</div>
+
+
+
 
 
 </body>
