--- a/medical_shop/templates/user/user_home.html
+++ b/medical_shop/templates/user/user_home.html
@@ -86,9 +86,17 @@
 </div>
 
 <div class="row">
-  <div class="col bg-success">.col</div>
-  <div class="col bg-warning">.col</div>
-  <div class="col bg-success">.col</div>
+  
+    <div class="col-md-2 mt-2" >
+        <img width="100%" src="{% static 'imgs/med.svg' %}" alt="medical" style="width: 20%; height: 100px;">Order Medicine <br>save upto 25% 0ff
+    </div>
+    <div class="col-md-2 mt-2" >
+      <img width="100%" src="{% static 'imgs/Beauty.svg' %}" alt="medical" style="width: 20%; height: 100px;">Beauty <br>save upto 25% 0ff
+  </div>
+ 
+  <div class="col-md-2 mt-2" >
+    <img width="100%" src="{% static 'imgs/well.svg' %}" alt="medical" style="width: 20%; height: 100px;">Wellness <br>save upto 25% 0ff
+</div>
 </div>
 </div>
 
