--- a/medical_shop/templates/user/user_home.html
+++ b/medical_shop/templates/user/user_home.html
@@ -87,19 +87,36 @@
 
 <div class="row">
   
-    <div class="col-md-2 mt-2" >
+    <div class="col-md-4 mt-2" >
         <img width="100%" src="{% static 'imgs/med.svg' %}" alt="medical" style="width: 20%; height: 100px;">Order Medicine <br>save upto 25% 0ff
     </div>
-    <div class="col-md-2 mt-2" >
+    <div class="col-md-4 mt-2" >
       <img width="100%" src="{% static 'imgs/Beauty.svg' %}" alt="medical" style="width: 20%; height: 100px;">Beauty <br>save upto 25% 0ff
   </div>
  
-  <div class="col-md-2 mt-2" >
+  <div class="col-md-4 mt-2" >
     <img width="100%" src="{% static 'imgs/well.svg' %}" alt="medical" style="width: 20%; height: 100px;">Wellness <br>save upto 25% 0ff
 </div>
 </div>
 </div>
 
+<div class="container container-fluid mt-3">
+  <b id="text" class="text-white" style="font-size: 1.9vw;">Shop by Category</b>
+    <div class="row ">
+      <div class="col-sm-3" >
+        <a href="#"><img src="img/hot1.webp" class="rounded img-fluid m-2" width="100%" alt=""></a>
+      </div>
+      <div class="col-sm-3">
+        <a href="#"><img src="img/hot2.webp" class="rounded img-fluid m-2" width="100%" alt=""></a>
+      </div>
+      <div class="col-sm-3">
+        <a href="#"><img src="img/hot3.webp" class="rounded img-fluid m-2" width="100%" alt=""></a>
+      </div>
+      <div class="col-sm-3">
+        <a href="#"><img src="img/hot4.webp" class="rounded img-fluid m-2" width="100%" alt=""></a>
+      </div>
+    </div> 
+</div>
 
 
 
