--- a/medical_shop/templates/user/user_home.html
+++ b/medical_shop/templates/user/user_home.html
@@ -8,16 +8,23 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
 
   <nav class="navbar -xl bg-success navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="javascript:void(0)"><img src="{% static 'imgs/medical.jpg.jpg' %}" class="rounded-circle " alt="" style="height: 30%; width: 5%;"><br>MEDICAL_SHOP</a>
-
+      <div class="sb">
+        <form class="d-flex">
+          <input class="form-control me-2" type="text" placeholder="Search" style="width:100px;">
+          <button class="d-flex  btn btn-primary " type="button">Search</button>
+          <ul>
+          
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="#"></a>
         </li>
+      
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="#"></a>
@@ -100,23 +107,215 @@
 </div>
 </div>
 
-<div class="container container-fluid mt-3">
-  <b id="text" class="text-white" style="font-size: 1.9vw;">Shop by Category</b>
-    <div class="row ">
-      <div class="col-sm-3" >
-        <a href="#"><img src="img/hot1.webp" class="rounded img-fluid m-2" width="100%" alt=""></a>
-      </div>
-      <div class="col-sm-3">
-        <a href="#"><img src="img/hot2.webp" class="rounded img-fluid m-2" width="100%" alt=""></a>
-      </div>
-      <div class="col-sm-3">
-        <a href="#"><img src="img/hot3.webp" class="rounded img-fluid m-2" width="100%" alt=""></a>
-      </div>
-      <div class="col-sm-3">
-        <a href="#"><img src="img/hot4.webp" class="rounded img-fluid m-2" width="100%" alt=""></a>
-      </div>
-    </div> 
+<div class=" container-fluid mt-5">
+
+  <h2 id="text" class="" style="font-size: 1.9vw;"> Shop by Category </h2>
+
+  <div class="row ">
+    <div class="col-md-4">
+      <a href="#"><img src="{% static 'imgs/cag1.jpeg' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
+    </div>
+    <div class="col-md-4">
+      <a href="#"><img src="{% static 'imgs/cag3.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
+    </div>
+    <div class="col-md-4">
+      <a href="#"><img src="{% static 'imgs/cag5.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
+    </div>
+    <div class="col-md-4">
+      <a href="#"><img src="{% static 'imgs/cag8.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
+    </div>
+    <div class="col-md-4">
+      <a href="#"><img src="{% static 'imgs/cag9.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
+    </div>
+    <div class="col-md-4">
+      <a href="#"><img src="{% static 'imgs/cag10.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
+    </div>
+  </div>  
 </div>
+
+<!-- Remove the container if you want to extend the Footer to full width. -->
+<div class="container my-5">
+  <!-- Footer -->
+  <footer
+          class="text-center text-lg-start text-white"
+          style="background-color: #3e4551"
+          >
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+      <!-- Section: Links -->
+      <section class="">
+        <!--Grid row-->
+        <div class="row">
+          <!--Grid column-->
+          <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">MEDICAL_SHOP</h5>
+
+            <p>
+              IS our new MEDICAL trusted pharmacies, dispensing quality Medicine at reasonable price. 
+            </p>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">SHOPPING</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Health Articles</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">offers/coupons</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">FAQs</a>
+              </li>
+             
+            </ul>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">BUSINESS</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Franchice</a>
+              </li>
+         
+            </ul>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">CATEGORIES</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Family Care</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Lifestyle</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Fitness</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Personal Care</a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">SOCIAL</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Facebook</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Twitter</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Youtube</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Linkedln</a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+        </div>
+        <!--Grid row-->
+      </section>
+      <!-- Section: Links -->
+
+      <hr class="mb-4" />
+
+      <!-- Section: CTA -->
+      <section class="">
+        <p class="d-flex justify-content-center align-items-center">
+          <span class="me-3">Register for free</span>
+          <button type="button" class="btn btn-outline-light btn-rounded">
+            Sign up!
+          </button>
+        </p>
+      </section>
+      <!-- Section: CTA -->
+
+      <hr class="mb-4" />
+
+      <!-- Section: Social media -->
+      <section class="mb-4 text-center">
+        <!-- Facebook -->
+        <a
+           class="btn btn-outline-light btn-floating m-1"
+           href="#!"
+           role="button"
+           ><i class="fab fa-facebook-f"></i
+          ></a>
+
+        <!-- Twitter -->
+        <a
+           class="btn btn-outline-light btn-floating m-1"
+           href="#!"
+           role="button"
+           ><i class="fab fa-twitter"></i
+          ></a>
+
+        <!-- Google -->
+        <a
+           class="btn btn-outline-light btn-floating m-1"
+           href="#!"
+           role="button"
+           ><i class="fab fa-google"></i
+          ></a>
+
+        <!-- Instagram -->
+        <a
+           class="btn btn-outline-light btn-floating m-1"
+           href="#!"
+           role="button"
+           ><i class="fab fa-instagram"></i
+          ></a>
+
+        <!-- Linkedin -->
+        <a
+           class="btn btn-outline-light btn-floating m-1"
+           href="#!"
+           role="button"
+           ><i class="fab fa-linkedin-in"></i
+          ></a>
+
+        <!-- Github -->
+        <a
+           class="btn btn-outline-light btn-floating m-1"
+           href="#!"
+           role="button"
+           ><i class="fab fa-github"></i
+          ></a>
+      </section>
+      <!-- Section: Social media -->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div
+         class="text-center p-3"
+         style="background-color: rgba(0, 0, 0, 0.2)"
+         >
+      © 2020 Copyright:
+      <a class="text-white" href="https://mdbootstrap.com/"
+         >MDBootstrap.com</a
+        >
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
 
 
 
