--- a/medical_shop/templates/user/user_home.html
+++ b/medical_shop/templates/user/user_home.html
@@ -16,8 +16,8 @@
       <a class="navbar-brand" href="javascript:void(0)"><img src="{% static 'imgs/medical.jpg.jpg' %}" class="rounded-circle " alt="" style="height: 30%; width: 5%;"><br>MEDICAL_SHOP</a>
       <div class="sb">
         <form class="d-flex">
-          <input class="form-control me-2" type="text" placeholder="Search" style="width:100px;">
-          <button class="d-flex  btn btn-primary " type="button">Search</button>
+          <input class="form-control me-2" type="text" placeholder="Search" style="width: 50%; height: 40px;">
+          <button class="d-flex  btn btn-primary " type="button " style="width: 50% ; height: 40px;">Search</button>
           <ul>
           
       <ul class="navbar-nav">
@@ -113,7 +113,7 @@
 
   <div class="row ">
     <div class="col-md-4">
-      <a href="#"><img src="{% static 'imgs/cag1.jpeg' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
+      <a href="#"><img src="{% static 'imgs/face_wash.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
     </div>
     <div class="col-md-4">
       <a href="#"><img src="{% static 'imgs/cag3.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
@@ -125,7 +125,7 @@
       <a href="#"><img src="{% static 'imgs/cag8.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
     </div>
     <div class="col-md-4">
-      <a href="#"><img src="{% static 'imgs/cag9.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
+      <a href="#"><img src="{% static 'imgs/condoms.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
     </div>
     <div class="col-md-4">
       <a href="#"><img src="{% static 'imgs/cag10.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
@@ -134,11 +134,11 @@
 </div>
 
 <!-- Remove the container if you want to extend the Footer to full width. -->
-<div class="container my-5">
+<!-- <div class="container my-6" style="width: 100%; height: 150px;"> -->
   <!-- Footer -->
   <footer
           class="text-center text-lg-start text-white"
-          style="background-color: #3e4551"
+          style="background-color: #3e4551; width: 100%;" 
           >
     <!-- Grid container -->
     <div class="container p-4 pb-0">
