--- a/medical_shop/templates/user/user_home.html
+++ b/medical_shop/templates/user/user_home.html
@@ -113,7 +113,7 @@
 
   <div class="row ">
     <div class="col-md-4">
-      <a href="#"><img src="{% static 'imgs/face_wash.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
+      <a href="view_pro"><img src="{% static 'imgs/face_wash.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
     </div>
     <div class="col-md-4">
       <a href="#"><img src="{% static 'imgs/cag3.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
