--- a/medical_shop/templates/user/view_pro.html
+++ b/medical_shop/templates/user/view_pro.html
@@ -21,29 +21,29 @@
 
 <nav class="navbar navbar-expand-sm " id="navb">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">ROOTED</a>
+      <a class="navbar-brand" href="#">MEDICAL</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav me-auto">
           <li class="nav-item" id="dropdown">
-            <a href="" class="nav-link" id="dropbtn"> plants
+            <a href="" class="nav-link" id="dropbtn">FACE WASH
             </a>
             <div class="dropdown-content">
-              <a href="int_plt">Indoor Plants</a>
-              <a href="#">Flowering Plants</a>
-              <a href="#">Low Maintains Plants</a>
-              <a href="#">Air Purifying Plants</a>
-              <a href="#">Low Light Plants</a>
-              <a href="#">Cacti & Succulents Plants</a>
-              <a href="#">Hanging Plants</a>
-              <a href="#">Fruit Plants</a>
-              <a href="#">Bundle Plants</a>
+              <a href="int_plt">Himalaya Herbal</a>
+              <a href="#">Face Wash</a>
+              <a href="#">clear</a>
+              <a href="#">healthy skin</a>
+              <a href="#">Soap_free</a>
+              <a href="#">remove acne</a>
+              <a href="#">kills 99% of germs</a>
+              <!-- <a href="#">Fruit Plants</a> -->
+             
               <a href="#">Others</a>
 
             </div>
-          </li> 
+          <!-- </li> 
           <li class="nav-item" id="dropdown">
             <a href="" class="nav-link" id="dropbtn">Seeds
             </a>
@@ -54,8 +54,8 @@
               <a href="#">Fruit Seeds</a>
               <a href="#">Others</a>
             </div>
-          </li> 
-          <li class="nav-item" id="dropdown">
+          </li>  -->
+          <!-- <li class="nav-item" id="dropdown">
             <a href="" class="nav-link" id="dropbtn"> Planters & Accessories
             </a>
             <div class="dropdown-content">
@@ -66,12 +66,12 @@
               <a href="#">Hanging Planters</a>
               <a href="#">Plant Stands</a>
               <a href="#">Others</a>
-            </div>
-          </li>  
+            </div> -->
+          <!-- </li>  
           <li class="nav-item" >
-            <a href="" class="nav-link" id="dropbtn"> Fertilizers
+            <a href="" class="nav-link" id="dropbtn"> 
             </a>
-          </li> 
+          </li>  -->
         </ul>
 <!-- 
         <div class="collapse navbar-collapse" id="mynavbar">
@@ -104,8 +104,8 @@
             <div class="col-lg-5">
                 <img src="{% static 'imgs/face.jpeg' %}" alt="" style="width: 100%; height: 500px;" >
                 <div class="vp_btn">
-                <a href="../add_to_cart/{{data.pk}}"><button type="button" class="btn " >Add to cart</button></a>
-                <a href="buy"><button type="button" class="btn " >Buy now</button></a>
+                <a href="../add_to_cart/{{data.pk}}"><button type="button" class="btn btn-primary " >Add to cart</button></a>
+                <a href="buy"><button type="button" class="btn btn-primary" >Buy now</button></a>
                 </div>
             </div>
             <div class="col-lg-7">
@@ -118,9 +118,9 @@
 
 Bank Offer5% Unlimited Cashback on Flipkart Axis Bank Credit CardT&C <br> <br>
 
-Bank OfferFlat ₹1,200 off on HDFC Bank Credit Card EMI Txns on 6 and 9 months tenure, Min. Txn Value: ₹15,000T&C <br><br>
+Bank OfferFlat ₹349 off on HDFC Bank Credit Card EMI Txns on 6 and 9 months tenure, Min. Txn Value: ₹1,500T&C <br><br>
 
-Bank OfferFlat ₹1,500 off on HDFC Bank Credit Card EMI Txns on 12 months tenure, Min. Txn Value: ₹15,000T&C <br><br>
+Bank OfferFlat ₹500 off on HDFC Bank Credit Card EMI Txns on 12 months tenure, Min. Txn Value: ₹1,500T&C <br><br>
 
 Combo OfferBuy 2 or more items save ₹30See all productsT&C <br><br>
 
