--- a/medical_shop/templates/user/user_home.html
+++ b/medical_shop/templates/user/user_home.html
@@ -116,19 +116,19 @@
       <a href="view_pro"><img src="{% static 'imgs/face_wash.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
     </div>
     <div class="col-md-4">
-      <a href="#"><img src="{% static 'imgs/cag3.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
+      <a href="view_pro"><img src="{% static 'imgs/cag3.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
     </div>
     <div class="col-md-4">
-      <a href="#"><img src="{% static 'imgs/cag5.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
+      <a href="view_pro"><img src="{% static 'imgs/cag5.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
     </div>
     <div class="col-md-4">
-      <a href="#"><img src="{% static 'imgs/cag8.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
+      <a href="view_pro"><img src="{% static 'imgs/cag8.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
     </div>
     <div class="col-md-4">
-      <a href="#"><img src="{% static 'imgs/condoms.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
+      <a href="view_pro"><img src="{% static 'imgs/condoms.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
     </div>
     <div class="col-md-4">
-      <a href="#"><img src="{% static 'imgs/cag10.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
+      <a href="view_pro"><img src="{% static 'imgs/cag10.png' %}" class="rounded img-fluid m-3" width="100%" alt=""></a>
     </div>
   </div>  
 </div>
